Use List.of(if-only-one-arg)